# PyConsoleCMDTools

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  consolecmdtools.py  publish.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
consolecmdtools/: __init__.py  __main__.py  path.py
tests/: FakeErr.py  FakeIn.py  FakeOs.py  FakeOut.py  test_PyConsoleCMDTool.py  test_consolecmdtools.py  test_runas.py  testfile  testfile2
