[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consolecmdtools"
description = "Console command tools in Python"
requires-python = ">=3.6"
readme = "README.md"
keywords = ["python", "console", "command", "tool"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["consoleiotools"]
dynamic = ["version"]

[[project.authors]]
name = "Kyan"
email = "kai@kyan001.com"

[project.optional-dependencies]
opt = ["pillow"]
dev = ["build", "wheel", "pycodestyle"]

[project.urls]
Homepage = "https://github.com/kyan001/PyConsoleCMDTools"
"Issue Tracker" = "https://github.com/kyan001/PyConsoleCMDTools/issues"
"Source Code" = "https://github.com/kyan001/PyConsoleCMDTools"

[tool.setuptools]
py-modules = ["consolecmdtools"]

[tool.setuptools.dynamic]
version = {attr = "consolecmdtools.__version__"}

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests"]
